--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <main class="container">
-      <article class="blog-wrapper flex flex-column align-items-start">
+      <article class="blog-wrapper flex flex-column">
         <header>
           <picture class="image-wrapper">
             <img class="image" src="images/illustration-article.svg" alt="" />
