adding url in index html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
       property="og:image:alt"
       content="Preview of the blog card design for the HTML and CSS Foundations article."
     />
-    <meta property="og:url" content="https://your-site-url.com" />
+    <meta
+      property="og:url"
+      content="https://georgepapalazaridis.github.io/blog-preview-card/"
+    />
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="Blog Preview Card" />
     <meta property="og:locale" content="gr_GR" />
