footer corections with visibility hidden

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
 
         <footer>
           <section class="footer">
+            <h2 class="visually-hidden">Author Information</h2>
+            <!-- Visually hidden heading -->
             <img
               src="images/image-avatar.webp"
               alt="Author Greg Hooper"
