one more corection

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 
   <body>
     <main class="container">
+      <h1 class="visually-hidden">
+        HTML & CSS Foundations - Blog Preview Card
+      </h1>
       <article
         class="blog-wrapper flex flex-column"
         aria-label="Blog preview about HTML & CSS Foundations"
